# sd-spi-communications-library

./: .gitmodules  CMakeLists.txt  README.md  arduino_flattener.py
card_info/: card_info.ino
src/: CMakeLists.txt  sd_spi.h  sd_spi_commands.h  sd_spi_info.h
src/device/: CMakeLists.txt  arduino_platform_dependencies.cpp  sd_spi.c  sd_spi.cpp  sd_spi.h  sd_spi_platform_dependencies.c  sd_spi_platform_dependencies.h
src/emulator/: CMakeLists.txt  sd_spi_emulator.c  sd_spi_emulator.h
unit_tests/: sd_spi_device_test.ino  sd_spi_tests.c  unit_tests.ino
